# oters

./: '  .gitignore  Cargo.toml  LICENSE  README.md  notes.txt
.github/workflows/: rust.yml
examples/: ex0.otrs  ex1.otrs  ex2.otrs  ex3.otrs  ex4.otrs  ex4.rs  infer.otrs  nonex1.otrs  t1.otrs
examples/demo/: demo.otrs  main.rs
examples/loop_test/: loop_test.otrs  main.rs
examples/name_cycle/: data.otrs  main.otrs  main.rs
examples/paint/: colors.otrs  main.otrs  main.rs
examples/snake/: main.otrs  main.rs
examples/ui_test/: main.otrs  main.rs
oters/: Cargo.toml
oters-export/: Cargo.toml
oters/examples/: error_ex.otrs  ex1.otrs  ex1.rs  ex2.otrs  ex2.rs  ex4.otrs  ex4.rs  ex5.rs  macro_use.rs  syntax_ex.otrs
oters/src/: errors.rs  lib.rs  oters.lalrpop  std.otrs
oters/src/export/: mod.rs
oters/src/exprs/: errors.rs  mod.rs  tests.rs  utils.rs
oters/src/interpret/: errors.rs  mod.rs  tests.rs
oters/src/parser/: ast.rs  errors.rs  mod.rs  span.rs  tests.rs
oters/src/std/: event.otrs  mod.rs  stream.otrs
oters/src/types/: check.rs  errors.rs  mod.rs  tests.rs  utils.rs
oters_gui/: Cargo.toml
oters_gui/examples/: demo.otrs  demo.rs  lib_test.otrs  lib_test.rs  stdlib_test.otrs  stdlib_test.rs  stopwatch.otrs  stopwatch.rs  ui_test.otrs  ui_test.rs
oters_gui/src/: color.rs  gui.otrs  image.rs  input.rs  lib.rs  main.rs  shapes.rs  text.rs  time.rs  ui.rs  window.rs
oters_gui/src/gui/: color.otrs  input.otrs  time.otrs  widget.otrs
oters_gui/src/ui/: button.rs  checkbox.rs  hgroup.rs  image.rs  label.rs  mod.rs  separator.rs  textbox.rs  vgroup.rs
oters_lang/: Cargo.toml
oters_lang/examples/: ex1.otrs  ex1.rs  ex2.otrs  ex2.rs  macro_use.rs
oters_lang/src/: errors.rs  lib.rs  oters.lalrpop
oters_lang/src/export/: errors.rs  mod.rs
oters_lang/src/exprs/: errors.rs  mod.rs  tests.rs  utils.rs
oters_lang/src/interpret/: allocator.rs  mod.rs  tests.rs
oters_lang/src/parser/: ast.rs  span.rs  tests.rs
oters_lang/src/std/: event.otrs  mod.rs  stream.otrs
oters_lang/src/types/: check.rs  mod.rs  tests.rs
oters_macro/: Cargo.toml
oters_macro/src/: lib.rs  types.rs
src/: ast.rs  grammar.pest  lib.rs  main.rs  oters.lalrpop  parser.rs
src/exprs/: errors.rs  mod.rs  utils.rs
src/interpret/: errors.rs  mod.rs
src/parser/: ast.rs  mod.rs  tests.rs
src/types/: check.rs  errors.rs  mod.rs  tests.rs  utils.rs
