[package]
name = "oters"
authors = ["Pablo Lanza Serrano"]
version = "0.1.8"
description = "A Functional Reacitve Programming Language for writing GUI applications"
license = "MIT"
keywords = ["GUI", "DSL", "UI", "language"]
categories = ["compilers", "gui"]
repository = "https://github.com/PLanza/oters"
readme = "README.md"
documentation = "https://planza.github.io/Oters"

[lib]
name = "oters"
path = "src/lib.rs"

[profile.dev.package.'*']
opt-level = 3

[dependencies]
oters_lang = { path = "./oters_lang", version = "0.1.8" }
oters_gui = { path = "./oters_gui", version = "0.1.8" }
oters_macro = { path = "./oters_macro", version = "0.1.8" }
rand = "0.8.5"

[[example]]
name = "demo"
path = "examples/demo/main.rs"

[[example]]
name = "name_cycle"
path = "examples/name_cycle/main.rs"

[[example]]
name = "ui_test"
path = "examples/ui_test/main.rs"

[[example]]
name = "loop_test"
path = "examples/loop_test/main.rs"

[[example]]
name = "paint"
path = "examples/paint/main.rs"

[[example]]
name = "snake"
path = "examples/snake/main.rs"
