[package]
name = "oters"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oters_macro = { path = "../oters_macro/" }
lalrpop-util = { version = "^0.19", features = ["lexer"] }
regex = "1"
anyhow = "1.0.*"
thiserror = "1.0"
lazy_static = "1.4.*"
macroquad = "0.3.25"
daggy = "0.8.*"
chrono = "0.4.*"

[build-dependencies]
lalrpop = "^0.19"
