[package]
name = "oters_gui"
version = "0.1.8"
edition = "2021"
authors = ["Pablo Lanza Serrano"]
description = "Graphical library definitions for the oters programming language"
license = "MIT"
repository = "https://github.com/PLanza/oters/oters_gui"
documentation = "https://planza.github.io/Oters"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oters_lang = { path = "../oters_lang", version = "0.1.8" }
anyhow = "1.0.68"
lazy_static = "1.4.0"
macroquad = "0.3.25"
chrono = "0.4.23"
futures = "0.3.26"

[profile.dev.package.'*']
opt-level = 3
